drop player with S

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="character" data-character="reverse-chicken" draggable="true"></div>
       <div class="character" data-character="bomb" draggable="true"></div>
     </div>
-    <div id="character-select"></div>
+    <div id="character-select" class="character" data-character="chicken"></div>
     <button id="start-button">Commencer</button>
   </div>
 
